--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -19,6 +19,8 @@ elasticsearch.password: ${KIBANA_SYSTEM_PASSWORD}
 #
 xpack.fleet.agents.fleet_server.hosts: [ http://fleet-server:8220 ]
 
+xpack.monitoring.enabled: false
+
 xpack.fleet.outputs:
   - id: fleet-default-output
     name: default
